<resources>
    <string name="app_name">VPNApp</string>
    <string name="txt_mobile_vpn">Mobile VPN</string>
    <string name="txt_login">Login</string>
    <string name="txt_enter_your_account_number">Enter your account number</string>
    <string name="txt_field_hint">0000 0000 0000 0000</string>
    <string name="txt_dont_t_have_an_account_number">Dont’t have an account number?</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_continue_with_login">Continue with Login</string>
    <string name="back">Back</string>
    <string name="txt_too_many_devices">Too many devices</string>
    <string name="txt_too_many_desc">Please log out of at least one by removing it from the list below. You can find the corresponding device name under the device\'s Account settings.</string>
    <string name="txt_logout_from_this_device">Logout from this device</string>
    <string name="txt_failed_to_logged_devices">Failed to Load Logged Devices</string>
    <string name="acce_setting">Setting</string>
    <string name="acce_app_logo">App Logo</string>
    <string name="text_guide_to_app_usage">To start using the app, you first need to add time to your account. Either buy credit on our website or redeem a voucher.</string>
    <string name="add_30_days_time_us_4_99">Add 30 days time (US$4,99)</string>
    <string name="device_name">Device name:</string>
    <string name="_1115_0834_7105_8536">1115 0834 7105 8536</string>
    <string name="here_s_your_account_number_save_it">Here\'s your account number. Save it!!</string>
    <string name="congrats">Congrats!</string>
    <string name="mobile_vpn">Mobile VPN</string>
    <string name="logout_warning">Are you sure you want to log %1$s out?</string>
    <string name="yes_log_out_device">Yes, Log out device</string>
    <string name="google_api_key">AIzaSyDWnVD2uXaqmELnE3NtR1Hephx-V5sVGfI</string>
    <string name="desc_close">Close</string>
    <string name="txt_new_device_created">New Device Created</string>
    <string name="txt_select_location">Switch Location</string>
    <string name="txt_secure_connection">Secure Connection</string>
    <string name="txt_disconnect">Disconnect</string>
    <string name="txt_not_connected">Not connected</string>
    <string name="txt_secured_connection">Secured Connection</string>
    <string name="toast_turn_on_gps">Please enable GPS to fetch your current location.</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_done">Done</string>
    <string name="txt_select_location_head">Select Location</string>
    <string name="txt_custom_lists">Custom lists</string>
    <string name="txt_all_locations">All locations</string>
    <string name="desc_expand_country">Expand Country</string>
    <string name="txt_ownership">Ownership</string>
    <string name="txt_all">All</string>
    <string name="txt_mullvad_owned_only">Mullvad owned only</string>
    <string name="txt_rented_only">Rented only</string>
    <string name="descexpand_btn">Expand Btn</string>
    <string name="txt_providers">Providers</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="_26_03_2025_at_19_08">26/03/2025 at 19:08</string>
    <string name="paid_until">Paid until</string>
    <string name="account_number">Account Number</string>
    <string name="secure_coyote">Secure Coyote</string>
    <string name="vpn_settings">VPN Settings</string>
    <string name="api_access">API Access</string>
    <string name="app_version">App version</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="faqs_guides"><![CDATA[FAQs & Guides]]></string>
    <string name="settings">Settings</string>
    <string name="dns_settings">DNS Settings</string>
    <string name="server_ip_override">Server ip Override</string>
    <string name="wireguardb_ports">WireGuardb Ports</string>
    <string name="wireguardb_obfuscation">WireGuardb Obfuscation</string>
    <string name="udp_over_tcp_port">UDP-over-TCP Port</string>
    <string name="quantum_resistant_tunnel">Quantum-Resistant Tunnel</string>
    <string name="txt_search_for">Search for...</string>
</resources>