<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:paddingHorizontal="@dimen/_18sdp"
    android:paddingVertical="@dimen/_24sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_warning"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        android:background="@drawable/bg_warning_icon_red"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_warning_svg"
        android:tint="@color/dangerRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_warning_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/logout_warning"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_warning" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:backgroundTint="@color/dangerRed"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/yes_log_out_device"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_warning_title"
        app:layout_constraintEnd_toEndOf="@id/tv_warning_title"
        app:layout_constraintStart_toStartOf="@id/tv_warning_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:backgroundTint="@color/neutralGray"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="@id/tv_warning_title"
        app:layout_constraintStart_toStartOf="@id/tv_warning_title" />



</androidx.constraintlayout.widget.ConstraintLayout>